# TYPHOON

./: .gitignore  .markdownlint.yml  .shellcheckrc  AGENTS.md  LICENSE  PROTOCOL.md  README.md
evaluation/: .gitignore  .hadolint.yaml  EVALUATION.md  README.md  pyproject.toml
evaluation/background/common/: profile_env.py
evaluation/background/compose/: docker-compose.build.yml  per_run.yml.j2
evaluation/background/control_plane/: Dockerfile.client  Dockerfile.server  control_client.py  control_server.py
evaluation/background/dns/: Dockerfile.client  Dockerfile.server  dns_client.py  dns_server.py
evaluation/background/gaming/: Dockerfile.client  Dockerfile.server  gaming_client.py  gaming_server.py
evaluation/background/quic_download/: Dockerfile.client  Dockerfile.server  quic_client.py  quic_server.py
evaluation/background/quic_upload/: Dockerfile.client  Dockerfile.server  quic_client.py  quic_server.py
evaluation/background/rtp_video/: Dockerfile.client  Dockerfile.server  rtp_video.py
evaluation/background/rtp_voice/: Dockerfile.client  Dockerfile.server  rtp_voice.py
evaluation/background/unknown/: Dockerfile.client  Dockerfile.server  unknown.py
evaluation/background/wireguard_idle/: Dockerfile.client  Dockerfile.server  wireguard_idle.sh
evaluation/chaos/: Dockerfile  entrypoint.sh
evaluation/compose/: docker-compose.build.yml  docker-compose.load.yml  docker-compose.yml
evaluation/compose/env/: .env.amneziawg  .env.hysteria2  .env.obfs4  .env.obfs4_iat  .env.obfs4_iat2  .env.openvpn  .env.quic  .env.raw_tcp  .env.raw_udp  .env.shadowsocks  .env.tls  .env.tor  .env.typhoon  .env.vless_reality  .env.wireguard  .env.wireguard_daita
evaluation/observer/: Dockerfile  entrypoint.sh
evaluation/protocols/amneziawg/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/common/: _profile.py  _scenario.py  socks5_sender.py  tcp_sender.py  tcp_sink.py  udp_sender.py  udp_sink.py
evaluation/protocols/hysteria2/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/obfs4/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/openvpn/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/quic/: Dockerfile.client  Dockerfile.server  client.py  server.py
evaluation/protocols/raw_tcp/: Dockerfile.client  Dockerfile.server
evaluation/protocols/raw_udp/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  client.py  server-entrypoint.sh  server.py
evaluation/protocols/shadowsocks/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server.json
evaluation/protocols/tls/: Dockerfile.client  Dockerfile.server  client.py  server.py
evaluation/protocols/tor/: Dockerfile.client  Dockerfile.server  client.py  server.py
evaluation/protocols/typhoon/: Cargo.toml  Dockerfile.client  Dockerfile.server
evaluation/protocols/vless_reality/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/wireguard/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/protocols/wireguard_daita/: Dockerfile.client  Dockerfile.server  client-entrypoint.sh  server-entrypoint.sh
evaluation/src/typhoon_eval/: analysis.py  benchmark.py  capture_stats.py  docker_utils.py  flow_plot.py  orchestrator.py  pcap_flow_plot.py  pcap_stats.py  pipeline.py  proto_compare_plots.py  protocols.py  self_compare.py  traffic_compare.py  use_case_compare.py
evaluation/transport/: Cargo.toml  Dockerfile
evaluation/transport/src/: lib.rs
typhoon/: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md
typhoon/benches/: handshake.rs  load.rs  roundtrip.rs
typhoon/example/: client_hello_world.rs  client_pool.rs  debug_probe.rs  flat_iat_decoy.rs  gen_test_key.rs  heavy_traffic.rs  hello_world.rs  long_session.rs  mimic_probe.rs  mirror_decoy.rs  multi_client.rs  multi_flow.rs  use_case.rs
typhoon/examples/: basic_usage.rs
typhoon/src/: capture.rs  constants.rs  debug.rs  defaults.rs  error.rs  generic.rs  lib.rs  random.rs  settings.rs
typhoon/src/bytes/: buffer.rs  common.rs  dynamic.rs  fixed.rs  holder.rs  mod.rs  pool.rs  static.rs  utils.rs
typhoon/src/cache/: common.rs  map.rs  mod.rs  value.rs
typhoon/src/certificate/: client.rs  mod.rs  server.rs  utils.rs
typhoon/src/crypto/: asymmetric.rs  certificate.rs  client.rs  error.rs  math.rs  mod.rs  server.rs  symmetric.rs  utils.rs
typhoon/src/flow/: client.rs  common.rs  config.rs  controller.rs  decoy.rs  envelope.rs  error.rs  fake_body.rs  fake_header.rs  mod.rs  probe.rs  server.rs
typhoon/src/session/: client.rs  client_health.rs  common.rs  controller.rs  error.rs  health.rs  mod.rs  rtt.rs  server.rs  server_health.rs  state.rs
typhoon/src/settings/: builder.rs  error.rs  mod.rs  override_map.rs  settings.rs  statics.rs  structure.rs
typhoon/src/socket/: client.rs  client_handle.rs  error.rs  mod.rs  pool.rs  server.rs
typhoon/src/tailer/: flags.rs  mod.rs  structure.rs
typhoon/src/tailor/: codec.rs  flags.rs  mod.rs  structure.rs
typhoon/src/trailer/: flags.rs  mod.rs  structure.rs
typhoon/src/utils/: bitset.rs  channel.rs  mod.rs  random.rs  socket.rs  sync.rs  time.rs
typhoon/tests/bytes/: buffer.rs  dynamic.rs  fixed.rs  managed.rs  owned.rs  pool.rs  static.rs  utils.rs
typhoon/tests/cache/: map.rs  value.rs
typhoon/tests/certificate/: mod.rs  server.rs
typhoon/tests/crypto/: asymmetric.rs  symmetric.rs
typhoon/tests/debug/: mod.rs
typhoon/tests/flow/: config.rs  controller.rs  decoy.rs  envelope.rs  fake_body.rs  fake_header.rs
typhoon/tests/network/: client_pool.rs  common.rs  decoy.rs  echo.rs  errors.rs  handshake_replay.rs  identity_rejection.rs  main.rs  multi_client.rs  multi_flow.rs
typhoon/tests/session/: client.rs  client_health.rs  controller.rs  rtt.rs  server.rs  server_health.rs  state.rs
typhoon/tests/settings/: assertions.rs  builder.rs  override_map.rs
(+81 files in other folders)
