[tool.poetry]
name = "typhoon-eval"
version = "0.1.0"
description = "TYPHOON protocol evaluation harness — traffic capture, analysis, and classification"
packages = [{ include = "typhoon_eval", from = "src" }]
authors =  [
    "Alexander Sergeev <aleksandr.sergeev.dm@gmail.com>"
]

[tool.poetry.dependencies]
python             = "^3.11"
click              = "^8.1"
rich               = "^13.0"
python-on-whales   = "^0.73"
scapy              = "^2.6"
numpy              = "^2.0"
matplotlib         = "^3.9"
jinja2             = "^3.1"
scikit-learn       = "^1.4"
xgboost            = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"

[tool.poetry.requires-plugins]
poethepoet = { version = ">=0.24", extras = ["poetry_plugin"] }

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 320

[tool.ruff.lint]
preview = true
select = [
    "E", "F", "I", "UP", "B",       # pyflakes / pycodestyle / isort / pyupgrade / bugbear
    "ANN",                          # flake8-annotations — AGENTS: type hints
    "PLC0415",                      # pylint convention: no imports inside functions — AGENTS
    "PLR2004",                      # pylint refactor: magic-value-comparison — AGENTS: use constants
    "PERF",                         # perflint — efficiency
    "SIM",                          # flake8-simplify
    "ICN001",                       # flake8-import-conventions — enforce idiomatic aliases (numpy/matplotlib)
]
ignore = [
    "ANN401",                       # allow `Any` (matplotlib axes, scapy packets)
    "RUF001", "RUF002", "RUF003",   # ambiguous-unicode in docstrings — intentional typography
    "PERF203",                      # try/except in loops is the right pattern for UDP recv
    "E221", "E222", "E231", "E241", "E251", "E272",  # whitespace rules — conflict with the project's deliberate column-alignment style (e.g. `RESULTS_DIR    = …`)
]

[tool.ruff.lint.per-file-ignores]
"src/typhoon_eval/background/features.py"      = ["N806", "N803"]   # sklearn X / X_train convention
"src/typhoon_eval/background/ml_blending.py"   = ["N806", "N803"]   # sklearn X / X_train convention
"src/typhoon_eval/background/detectability/*.py" = ["N806", "N803"] # sklearn X / X_train convention
"protocols/common/_profile.py"                 = ["ANN001"]         # script entrypoint
"protocols/common/*sender.py"                  = ["ANN001"]         # script entrypoint
"protocols/common/*sink.py"                    = ["ANN001"]         # script entrypoint (signal handlers)
"background/*/*.py"                            = ["PLR2004"]        # inline numeric constants in protocol generators

[tool.ruff.lint.flake8-import-conventions.aliases]
numpy                = "np"
"matplotlib.pyplot"  = "plt"
"matplotlib.patches" = "mpatches"


[tool.poe.tasks]

  # ── shared (capture / analyse / orchestrate) ─────────────────────────────
  [tool.poe.tasks.build]
  cmd  = "docker compose -f compose/docker-compose.build.yml build"
  help = "Build all protocol Docker images"

  [tool.poe.tasks.capture]
  cmd  = "python -m typhoon_eval.shared.orchestrator"
  help = "Run captures — pass --all or --protocol <name>, optionally --chaos"

  [tool.poe.tasks.analyze]
  cmd  = "python -m typhoon_eval.shared.analysis"
  help = "Analyze captured pcap files — pass --run <YYYYMMDD_HHMMSS> or omit for latest"

  [tool.poe.tasks.lint]
  cmd  = "ruff check src/ protocols/ background/"
  help = "Lint Python sources with ruff"

  # ── PART 1 — TYPHOON self comparison (intrinsic) ─────────────────────────
  [tool.poe.tasks.plot]
  cmd  = "python -m typhoon_eval.self.flow_plot"
  help = "Generate per-flow packet structure diagrams — pass --example <name> or --log <file>, and --out-dir <dir>"

  [tool.poe.tasks.self-compare]
  cmd  = "python -m typhoon_eval.self.self_compare"
  help = "Run TYPHOON N times and compare runs (variability analysis)"

  [tool.poe.tasks.use-case-compare]
  cmd  = "python -m typhoon_eval.self.use_case_compare"
  help = "Run TYPHOON for each PROTOCOL.md use case and compare profiles"

  [tool.poe.tasks.traffic-compare]
  cmd  = "python -m typhoon_eval.self.traffic_compare"
  help = "Run TYPHOON with all 4 payload×wait traffic modes and compare results"

  # ── PART 2 — Operational comparison vs other protocols ───────────────────
  [tool.poe.tasks.proto-flow-plot]
  cmd  = "python -m typhoon_eval.shared.pcap_flow_plot"
  help = "Per-packet timeline grid from pcap captures — pass --run <YYYYMMDD_HHMMSS> or omit for latest"

  [tool.poe.tasks.proto-compare]
  cmd  = "python -m typhoon_eval.protocols_op.proto_compare_plots"
  help = "Multi-protocol comparison plots from pcap captures — pass --run <YYYYMMDD_HHMMSS> or omit for latest"

  # ── PART 3 — Background-blending evaluation ──────────────────────────────
  [tool.poe.tasks.background-build]
  cmd  = "docker compose -f background/compose/docker-compose.build.yml build"
  help = "Build all background generator Docker images (DNS, gaming, RTP, QUIC, control plane, WG idle)"

  [tool.poe.tasks.background-corpus]
  cmd  = "python -m typhoon_eval.background.corpus"
  help = "Run the background-blending corpus — every TYPHOON profile + bg class per run (default 70 runs)"

  [tool.poe.tasks.background-blending]
  cmd  = "python -m typhoon_eval.background.ml_blending"
  help = "Compute primary blending metric (confident-blend fraction) from corpus"

  [tool.poe.tasks.background-detectability]
  cmd  = "python -m typhoon_eval.background.detectability"
  help = "Held-out detectability — Test A (pair-binary) + B (closed-world n+1) + D/E/F (open-set), k-fold CV"

  [tool.poe.tasks.background-distplot]
  cmd  = "python -m typhoon_eval.background.dist_plot"
  help = "Plot size / IAT distribution overlays per TYPHOON-vs-target pair + per-flow packet-index diagnostic"

  # ── PART 4 — Rust-level performance benchmarking (Linux only) ────────────
  [tool.poe.tasks.benchmark]
  cmd  = "python -m typhoon_eval.benchmark"
  help = "Run cargo bench (roundtrip, handshake) + example flamegraphs. Linux only — requires perf and cargo-flamegraph already installed."

  # ── Pipeline orchestrator ────────────────────────────────────────────────
  [tool.poe.tasks.evaluate]
  cmd  = "python -m typhoon_eval.pipeline"
  help = "Run the full evaluation pipeline: build → capture → analyze → visualize → typhoon → background → benchmark → report. Derived artifacts under artifacts/<pipeline_id>/; PCAPs stay in results/. Pass --corpus-root to re-analyze a stored corpus without regenerating it. Benchmark phase auto-skips on non-Linux hosts."

  [tool.poe.tasks.clean]
  shell = "rm -rf results/captures results/background"
  help  = "Delete all captured pcap directories (captures + background corpora). Artifacts under artifacts/ are left untouched."
