[package]
name = "typhoon"
version = "0.1.0"
edition = "2024"
description = "A sample implementation of TYPHOON protocol"
authors = [
    "Alexander Sergeev <aleksandr.sergeev.dm@gmail.com>"
]


[features]
default = ["fast_software", "server", "client", "tokio"]
fast_software = ["dep:chacha20"]
fast_hardware = ["dep:aes", "dep:ctr"]
full_software = ["dep:chacha20", "dep:chacha20poly1305"]
full_hardware = ["dep:aes", "dep:ctr", "dep:aes-gcm"]
server = ["dep:socket2"]
client = []
debug = ["client", "server"]
async-std = ["dep:async-channel", "dep:async-executor", "dep:async-io", "dep:async-lock"]
tokio = ["dep:tokio"]


[dependencies]
aes = { version = "^0.8.4", optional = true }
aes-gcm = { version = "^0.10.3", features = ["std"], optional = true }
async-channel = { version = "^2.5.0", optional = true }
async-executor = { version = "^1.13.3", optional = true }
async-io = { version = "^2.6.0", optional = true }
async-lock = { version = "^3.4.2", optional = true }
arc-swap = "^1.7"
async-trait = "^0.1"
bitflags = "^2.10.0"
clap = { version = "^4.5", features = ["derive"], optional = true }
blake3 = "^1.8.3"
cfg-if = "^1.0.4"
crossbeam = "^0.8.4"
ctr = { version = "^0.9.2", optional = true }
chacha20 = { version = "^0.10.0", features = ["xchacha"], optional = true }
chacha20poly1305 = { version = "^0.10.1", features = ["std"], optional = true }
classic-mceliece-rust = { version = "^3.1.0", features = ["mceliece348864"] }
ed25519-dalek = "^2.2.0"
futures = "^0.3.31"
log = "^0.4.29"
rand = "^0.8.5"
subtle = "^2.6.1"
thiserror = "^2.0.18"
tokio = { version = "^1.47.1", features = ["net", "sync", "time", "rt", "rt-multi-thread", "macros"], optional = true }
rand_distr = "^0.4.3"
socket2 = { version = "^0.5", features = ["all"], optional = true }
x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "^0.2"

[dev-dependencies]
criterion = { version = "^0.5", features = ["async_tokio"] }
env_logger = "^0.11"
tempfile = "^3.15"


[[test]]
name = "network"
path = "tests/network/main.rs"
required-features = ["client", "server", "tokio"]

[[bin]]
name = "typhoon-debug"
path = "src/bin/typhoon_debug.rs"
required-features = ["debug"]

[[bin]]
name = "typhoon-gen-key"
path = "src/bin/typhoon_gen_key.rs"
required-features = ["server", "clap"]

[[bench]]
name = "roundtrip"
path = "benches/roundtrip.rs"
harness = false
required-features = ["client", "server", "tokio"]


[[example]]
name = "hello_world"
path = "example/hello_world.rs"
required-features = ["client", "server"]

[[example]]
name = "debug_probe"
path = "example/debug_probe.rs"
required-features = ["debug"]

[[example]]
name = "multi_flow"
path = "example/multi_flow.rs"
required-features = ["client", "server"]

[[example]]
name = "long_session"
path = "example/long_session.rs"
required-features = ["client", "server"]

[[example]]
name = "multi_client"
path = "example/multi_client.rs"
required-features = ["client", "server"]

[[example]]
name = "heavy_traffic"
path = "example/heavy_traffic.rs"
required-features = ["client", "server"]


# Retain line-level debug symbols in release builds for flamegraph / perf profiling.
# Cargo ignores [profile] from dependency crates, so this has no effect on downstream users.
[profile.release]
debug = 1
